POM update for deployment

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.asprise.ocr</groupId>
     <artifactId>java-ocr-api</artifactId>
-    <version>15.3</version>
+    <version>15.3.0.1</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -93,6 +93,33 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.3</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -106,10 +133,10 @@
 
     <developers>
         <developer>
-            <name>Stephen Brown</name>
-            <email>sbrown@asprise.com</email>
+            <name>Asprise</name>
+            <email>dev@asprise.com</email>
             <organization>Asprise Inc</organization>
-            <organizationUrl>http://www.sonatype.com</organizationUrl>
+            <organizationUrl>http://asprise.com</organizationUrl>
         </developer>
     </developers>
 
@@ -118,4 +145,15 @@
         <developerConnection>scm:git:git@github.com:Asprise/java-ocr-api.git</developerConnection>
         <url>git@github.com:Asprise/java-ocr-api.git</url>
     </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 </project>
