--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,19 @@
 
     <groupId>com.asprise.ocr</groupId>
     <artifactId>java-ocr-api</artifactId>
-    <version>15.3.0.1</version>
+    <version>15.3.0.2</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
-    <description>A Java OCR SDK Library API allows you to perform OCR and bar code recognition on images (JPEG, PNG, TIFF, PDF, etc.) and output as plain text, xml with full coordinate as well as searchable PDF</description>
-    <url>https://github.com/Asprise/java-ocr-api</url>
+    <description>A Java OCR SDK Library API allows you to perform OCR and bar code recognition on images (JPEG, PNG, TIFF, PDF, etc.) and output as plain text, xml with full coordinate, searchable PDF or editable RTF.</description>
+    <url>http://asprise.com/royalty-free-library/java-ocr-api-overview.html</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compile.source>1.5</maven.compile.source>
         <maven.compile.target>1.5</maven.compile.target>
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+        <source.excludeResources>true</source.excludeResources>
     </properties>
 
     <dependencies>
